# NVDARemoteAudioServer

./: .gitattributes  .gitignore  AGENTS-ZHCN.md  AGENTS.md  API-ZHCN.md  API.md  Cargo.toml  LICENSE  README-ZHCN.md  README.md  dev-env.cmd
.github/workflows/: release.yml
deploy/systemd/: NVDARemoteAudioServer.service
src/: config.rs  lib.rs  main.rs  net.rs  protocol.rs  server.rs  state.rs
